Lesson 8 (tracing, Kafka, Prometheus) (#7)
* Add .idea to .gitignore

* Add dummy MultiCreateSolutionV1 and MultiCreateVerdictV1

* Add tracing

* Add dummy producer

* Add dummy prometheus counters

* Refactor error handling; Move brokers to params; Move producer to params
